# east-money-skills

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-03-16-mx-skills-implementation.md
docs/superpowers/specs/: 2026-03-16-mx-skills-design.md
mx_skills/: __init__.py  __main__.py  _common.py  cli.py  findata.py  finsearch.py  macrodata.py  stockpick.py
skills/MX_FinData/: SKILL.md
skills/MX_FinSearch/: SKILL.md
skills/MX_MacroData/: SKILL.md
skills/MX_Skills/: SKILL.md
skills/MX_Skills/references/: findata.md  finsearch.md  macro.md  stockpick.md
skills/MX_StockPick/: SKILL.md
