[project]
name = "mx-skills"
version = "0.1.0"
description = "East Money MiaoXiang Financial Skills - Financial news, data query, macro data, stock screening"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "IanLiYi1996" }]

[project.urls]
Homepage = "https://github.com/IanLiYi1996/east-money-skills"

[project.scripts]
mx-skills = "mx_skills.cli:main"

dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
excel = ["pandas>=1.5", "openpyxl>=3.0"]
all = ["pandas>=1.5", "openpyxl>=3.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
